# niffler

./: index.html
data/: behaviors.csv  (+6 more)
niffler_tests/: .env.example  README.md  config.local.env  config.remote.env  docker-compose.mock.yml  pyproject.toml
niffler_tests/etc/selenoid/: browsers.json
niffler_tests/internal/: app.py  marks.py  settings.py  utils.py
niffler_tests/internal/allure_templates/: http-colored-request.ftl  http-colored-response.ftl
niffler_tests/internal/clients/: spends.py
niffler_tests/internal/clients/api/: auth.py  base.py  kafka.py  spends.py  users.py
niffler_tests/internal/clients/db/: spends.py
niffler_tests/internal/clients/pb/: __init__.py  (+3 more)
niffler_tests/internal/fixtures/: clients.py  pages.py  rollbacks.py  spends.py  users.py
niffler_tests/internal/interceptors/: logging.py
niffler_tests/internal/models/: currency.py  spend.py
niffler_tests/internal/soap/: templates_reader.py
niffler_tests/internal/utils/: allure.py  common.py
niffler_tests/tests/: conftest.py  marks.py  test_categories.py  test_spendings.py  test_spends.py
niffler_tests/tests/account/: test_login.py  test_registration.py
niffler_tests/tests/api_tests/: conftest.py  test_spends.py  test_users.py
niffler_tests/tests/grpc/: test_calculate_rate.py  test_foo.py  test_get_all_currencies.py
niffler_tests/tests/grpc_tests/: test_calculate_rate.py  test_get_all_currencies.py
niffler_tests/tests/kafka/: test_kafka.py
niffler_tests/tests/soap_tests/: test_users.py
niffler_tests/tests/spends/: __init__.py  test_categories.py  test_spends.py
(+4728 files in other folders)
