[tool.poetry]
name = "niffler-tests"
version = "0.1.0"
description = ""
authors = ["lrayne <legaterayne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
selene = {version = "^2.0.0rc9", allow-prereleases = true}
faker = "^38.2.0"
pytest = "^9.0.1"
pydantic = "^2.12.4"
python-dotenv = "^1.2.1"
polling2 = "^0.5.0"
pbreflect = "^1.1.1"
allure-pytest = "^2.15.3"
pydantic-settings = "^2.13.1"
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"
sqlmodel = "^0.0.37"
requests-toolbelt = "^1.0.0"
pytest-xdist = "^3.8.0"
curlify = "^3.0.0"
xmlschema = "^4.3.1"
xmltodict = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--alluredir=./allure-results"
